syntax = "proto3";

package echo;

import "google/api/annotations.proto";

service Echo {
  rpc Hello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/v1/hello"
      body: "*"
    };
  }
}

message SuggestRequest {
  string input = 1;
}

message SuggestAnswer {
  string text = 1;
  uint32 position = 2;
}

message SuggestResponse {
  repeated SuggestAnswer suggest_answer = 1;
}